<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Cards Against Foulis</string>

    <string name="game_title">Cards Against Foulis</string>
    <string name="action_settings">Settings</string>
    <string name="hint_card">Card…</string>
    <string name="white_cards">White Cards</string>
    <string name="black_cards">Black Cards</string>
    <string name="load_cards">Load Cards</string>
    <string name="start_game">Start Game</string>
    <string name="join_game">Join Game</string>
    <string name="sign_in">Sign In</string>
    <string name="button_save">Save</string>

    <string name="home_button">Home</string>

    <string name="is_inviting_you">is challenging you to a game!</string>

    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="empty_not_saved">Card not saved because it is empty.</string>

    <string name="created_game">Created game ID</string>
    <string name="up_to">Up to ...</string>
    <string name="default_goal_score">10</string>
    <string name="waiting_players_join">Waiting for players to join</string>
    <string name="joined_players">Players that joined: \u0020</string>

    <string name="game_id">Give us the game ID, you fool(is)</string>

    <string name="created_by">Created by: \u0020</string>
    <string name="host_name">host</string>
    <string name="time">Time: \u0020</string>

    <string name="next_black_card">Next Round</string>
    <string name="choose_white_card">Choose Card</string>
    <string name="wait_for_others">Waiting for other players ...</string>

    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>

    <string name="current_czar">All hail your current Czar: \u0020</string>
    <string name="waiting_for_plebs">Waiting for stupid plebs...</string>
    <string name="waiting_for_czar">The mighty Czar is thinking...</string>
    <string name="choose_winner">What would Foulis choose?</string>
    <string name="winner_is">... and the winner is: \u0020</string>
    <string name="noone">Foulis</string>

    <string name="players_left">The following players/assholes left the game: \u0020</string>

    <string name="leader_board">Leaders</string>
    <string name="leader_title">Who is the most Foulis?</string>
    <string name="rank">#</string>
    <string name="player_name">Player</string>
    <string name="points">Pts</string>
    <string name="games_played">GP</string>
    <string name="wins">W</string>
    <string name="percentage">Pct</string>

</resources>
